--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,7 +10,7 @@ $screen-l-min: 1200px;
 $body-ff: 'verdana';
 $heading-ff: 'Museo';
 
-$body-fz: 1.5em;
+$body-fz: 1.5rem;
 $h1-fz: 2.368em;
 $h2-fz: 1.776em;
 $h3-fz: 1.333em;
