--- a/src/styles/utils/_helpers.scss
+++ b/src/styles/utils/_helpers.scss
@@ -1,3 +1,4 @@
+// layout classes
 .container {
 	position: relative;
 	padding-left: 15px;
@@ -24,4 +25,118 @@
 .responsive {
 	max-width: 100%;
 	height: auto;
+}
+
+// visibility classes
+.xs {
+	@include m('hidden') {
+		@include respond-to('xs') {
+			display: none;
+		}
+	}
+	@include m('visible') {
+		@include respond-to('sp') {
+			display: none;
+		}
+	}
+}
+
+.mp {
+	@include m('hidden') {
+		@include respond-to('mp') {
+			display: none;
+		}
+	}
+	@include m('visible') {
+		@include respond-to('upto-s') {
+			display: none;
+		}
+	}
+}
+
+.l {
+	@include m('visible') {
+		@include respond-to('upto-m') {
+			display: none;
+		}
+	}
+}
+
+// spacing classes 
+.mb {
+	@include m('1') {
+		margin-bottom: $baseline*1 + px;
+	}
+	@include m('2') {
+		margin-bottom: $baseline*2 + px;
+	}
+	@include m('3') {
+		margin-bottom: $baseline*3 + px;
+	}
+}
+
+.mt {
+	@include m('1') {
+		margin-top: $baseline*1 + px;
+	}
+	@include m('2') {
+		margin-top: $baseline*2 + px;
+	}
+	@include m('3') {
+		margin-top: $baseline*3 + px;
+	}
+}
+
+.mtb {
+	@include m('1') {
+		@extend .mt--1;
+		@extend .mb--1;
+	}
+	@include m('2') {
+		@extend .mt--2;
+		@extend .mb--2;
+	}
+	@include m('3') {
+		@extend .mt--3;
+		@extend .mb--3;
+	}
+}
+
+.pb {
+	@include m('1') {
+		padding-bottom: $baseline*1 + px;
+	}
+	@include m('2') {
+		padding-bottom: $baseline*2 + px;
+	}
+	@include m('3') {
+		padding-bottom: $baseline*3 + px;
+	}
+}
+
+.pt {
+	@include m('1') {
+		padding-top: $baseline*1 + px;
+	}
+	@include m('2') {
+		padding-top: $baseline*2 + px;
+	}
+	@include m('3') {
+		padding-top: $baseline*3 + px;
+	}
+}
+
+.ptb {
+	@include m('1') {
+		@extend .pt--1;
+		@extend .pb--1;
+	}
+	@include m('2') {
+		@extend .pt--2;
+		@extend .pb--2;
+	}
+	@include m('3') {
+		@extend .pt--3;
+		@extend .pb--3;
+	}
 }
