--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 
 // 2. vendors
 @import
-	'vendors/reset-and-normalize'm
+	'vendors/reset-and-normalize',
 	'vendors/icons',
 	'vendors/royalslider',
 	'vendors/rs-default';
